--- a/tech-task/src/components/mainPageStyle.css
+++ b/tech-task/src/components/mainPageStyle.css
@@ -7,6 +7,7 @@
   display: flex;
   justify-content: left;
   align-items: center;
+  min-width: 54rem;
 }
 .label {
   position: static;
@@ -32,12 +33,12 @@
   border: 0;
 }
 .footer {
-  position: sticky;
   background-color: #696969;
-  display: inline-flex;
+  display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
+  min-width: 54rem;
   height: 2.5rem;
 }
 .author {
@@ -47,11 +48,10 @@
   font-style: normal;
   font-weight: bolder;
   font-size: 20px;
-  display: inline-block;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
+  margin-left: 1em;
   color: #ffffff;
+  min-width: 100px;
+  float: right;
 }
 .developer {
   width: 130px;
@@ -61,80 +61,149 @@
   font-weight: bolder;
   font-size: 20px;
   line-height: 31px;
-  display: flex;
-  align-items: flex-end;
-  text-align: center;
   color: #cbcaca;
+  margin-left: 75vw;
+  float: right;
 }
 h2 {
   margin: 0;
 }
-.product {
-  border-right: 2px solid rgba(175, 163, 163, 0.5);
-}
+
 .information {
-  width: 97%;
   margin-left: 0.5em;
   display: grid;
   max-height: 100%;
+  min-width: 20rem;
 }
 
 .container-input {
-  width: 100%;
-  height: 40%;
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
   margin-top: 0.5em;
+  margin-right: 1em;
   border: 0;
   grid-column-gap: 0.7em;
   grid-row-gap: 0.5em;
   max-height: 15rem;
-
-  padding-bottom: 2em;
-
-  padding-bottom: 0.5em;
+  border-bottom: 2px solid rgba(175, 163, 163, 0.5);
+  padding-bottom: 30px;
 }
 input {
-  width: 100%;
   height: 1.6rem;
   background-color: rgba(177, 177, 177, 0.3);
+  color: #000000;
+  padding-left: 10px;
 }
+
 button {
   height: 1.6rem;
-  width: 101%;
+
   background-color: #717171;
+  color: white;
 }
-.descr {
-  width: 202%;
+#descr {
+  background-color: rgba(177, 177, 177, 0.3);
   height: 6.5rem;
+  padding: 10px;
+  resize: none;
+  font-family: Saira;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 4;
+  grid-row-end: 4;
 }
+
 input,
 button,
-.descr {
+#descr {
   border-radius: 6px;
-
-  color: white;
   border: 0;
 }
 .statistic {
-  border-top: 2px solid rgba(175, 163, 163, 0.5);
   display: grid;
   font-family: Saira;
   font-size: 0.8em;
-  line-height: 180%;
   letter-spacing: 0.08em;
   color: #000000;
   position: absolute;
-  font-weight: bold;
-  top: 19rem;
-  width: 43.5%;
+  top: 20.2rem;
+  width: 20rem;
 }
+#numInfo,
 .stats {
   color: #000000;
-  font-weight: 1000;
+  font-weight: 400;
 }
 
-#numInfo {
-  font-weight: bolder;
+.product {
+  border-right: 2px solid rgba(175, 163, 163, 0.5);
+}
+.prod-item {
+  border-radius: 12px;
+  border: 2px solid rgb(0, 0, 0);
+  margin: 15px;
+  background-color: rgba(177, 177, 177, 0.3);
+  font-family: Saira;
+  font-weight: bold;
+  min-width: 500px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  max-height: 5em;
+}
+.prod-cont {
+  text-transform: uppercase;
+  margin: 0.5em;
+  max-height: 100%;
+}
+#type {
+  font-weight: lighter;
+}
+.id {
+  font-weight: lighter;
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 10px;
+}
+.status {
+  font-weight: lighter;
+}
+
+.del {
+  position: relative;
+  width: 100px;
+  min-width: 100%;
+  justify-content: right;
+}
+
+.price {
+  font-size: 1.5em;
+  font-weight: 400;
+  margin-top: 1.8em;
+  float: right;
+}
+
+.delete:before,
+.delete:after {
+  content: "";
+  width: 12px;
+  height: 1.4px;
+  background: #000000;
+  position: absolute;
+  cursor: pointer;
+}
+
+.delete:before {
+  webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.delete:after {
+  webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+.delBtn {
+  position: relative;
+  float: right;
+  margin-right: 1.2em;
+  margin-top: 0.7em;
 }
