--- a/tech-task/src/components/mainPageStyle.css
+++ b/tech-task/src/components/mainPageStyle.css
@@ -163,12 +163,12 @@ button,
   min-width: 500px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  max-height: 5em;
+  max-height: fit-content;
 }
 .prod-cont {
   text-transform: uppercase;
   margin: 0.5em;
-  max-height: 60px;
+  max-height: 100px;
 }
 .id {
   font-weight: lighter;
@@ -217,6 +217,11 @@ button,
   margin-top: 0.7em;
 }
 
+.moreInfo {
+  width: 45px;
+  margin-bottom: 1235px;
+}
+
 .Avaliable {
   border-color: #6fcf97;
 }
@@ -234,6 +239,8 @@ button,
 
 .container-status {
   display: flex;
+  align-items: flex-start;
+  justify-content: left;
 }
 .container-error {
   font-size: large;
@@ -247,6 +254,7 @@ button,
   position: static;
 }
 select {
+  height: 25px;
   border-radius: 4px;
   border-color: rgba(177, 177, 177, 0.3);
   background-color: rgba(177, 177, 177, 0.3);
